2003-06-16    John E. Joganic <john@joganic.com>
	* Added mkxincludes, automatic check for x-includes in configure

2003-06-15    John E. Joganic <john@joganic.com>
	* Released version 0.5.1-beta

2003-06-14    John E. Joganic <john@joganic.com>
	* Fixed wacomcpl/wacomxi to run on systems with tcl and tk installed
	* Moved wacomxi into subdirectory
	* Modified checks for tcl and tk to search include and library paths
	* Applied conditional build and install to wacomxi
	* Modified wacomcpl to install and run regardless of install prefix
	* Added Intuos filter code back into data path
	* Nixed Graphire filter code because suppression code does same thing
	* Raw filtering is enabled by default
	* Intuos filter code works for both serial and USB tablets

2003-06-03    Ping Cheng <pingc@wacom.com>
	* Added calibration tool and made it install as default
	* Added gimp option for calibration

2003-05-15    John E. Joganic <john@joganic.com>

	* Added timestamp to sample structure
	* Added acceleration format to raw xidump for viewing jitter

2003-05-12    Ping Cheng <pingc@wacom.com>
	* Removed FIRST_TOUCH_FLAG (J. Yen's patch for wcmCommon.c)
	* Cleaned valuator report for relative mode
	* Send 4th/5th buttons for all relative wheels
	* Report in-prox after tool is set (J. Yen's patch for wacom.c)
	* Fixed compile warning for xf86Wacom.c

2003-05-09    Ping Cheng <pingc@wacom.com>

	* Added Cintiq Partner, Graphire3 4x5 and 6x8
	* Added a few new xsetwacom commands

2003-05-04    John E. Joganic <john@joganic.com>

	* Overhauled device reading.
	* Consolidated serial data path.
	* Updated ISDV4 data path, untested.
	* Added data history buffer and working state.
	* Added raw data filtering.
	* Commented out some incomplete features.

2003-05-03    John E. Joganic <john@joganic.com>

	* Fixed USB 4D mouse button mapping to be consistent with serial 4D.

2003-05-02    John E. Joganic <john@joganic.com>

	* Added xsetwacom, libwacomcfg, and Xwacom.h; work in progress