@@ -2,3 +2,6 @@ There are a number of authors- just check the source files.  Currently,
 this package is being maintained by:
 
 John E. Joganic <jej@j-arkadia.com>
+
+ISDV4 support:
+Dean Townsley <townsley@physics.ucsb.edu>
